--- a/static/master-detail.html
+++ b/static/master-detail.html
@@ -29,19 +29,19 @@
 				includeHelper(ns);
 				if (ns !== undefined) {
 					var all_uri = '../data/' + ns + '/all.js';
-					console.log('Loading all: %s', all_uri);
-					$.getJSON(all_uri, function(data) {
-						window[ns].loadViewModel(data);
-						console.log(window[ns].ViewModel);
+					// console.log('Loading all: %s', all_uri);
+					$.getJSON(all_uri, function(allData) {
+						window[ns].loadViewModel(allData);
 						if (id !== undefined) {
 							var id_uri = '../data/' + ns + '/' + id + '.js';
-							$.getJSON(id_uri, function(data) {
-								window[ns].loadModel(data);
-								console.log(window[ns].ViewModel);
+							// console.log('Loading single element from: %s', id_uri);
+							$.getJSON(id_uri, function(idData) {
+								console.log('Data loaded.');
+								window[ns].loadModel(idData);
 								ko.applyBindings(window[ns].ViewModel);
 							});
 						} else {
-							ko.applyBindings(window[ns].ViewModel);
+							//ko.applyBindings(window[ns].ViewModel);
 						}
 
 					});
@@ -61,9 +61,9 @@
 		<a href="index.html">Back</a>	
 		<a href="javascript:testBind()">Bind</a>
 		<div class="single">
-			Id : <span data-bind="text: active.id"></span><br/>
-			Name:<input id="name" type="text" data-bind="value: active.name"/><br/>
-			Url:<input id="url" type="text" data-bind="value: active.url" /><br/>
+			Id : <span data-bind="text: active().id"></span><br/>
+			Name:<input id="name" type="text" data-bind="value: active().name"/><br/>
+			Url:<input id="url" type="text" data-bind="value: active().url" /><br/>
 			<input type="button" value="New" />
 			<input type="submit" value="Update" />
 			<input type="button" value="Delete" />
