--- a/static/master-detail.html
+++ b/static/master-detail.html
@@ -3,51 +3,8 @@
 		<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
 		<script type='text/javascript' src='knockout-2.0.0.debug.js'></script>
 		<script type='text/javascript' src='underscore.js'></script>
+		<script type='text/javascript' src='binding-helper.js'></script>
 		<script type='text/javascript'>
-			function getQS(uri) {
-				return uri.substr(1);
-			}
-
-			function getParts(uri) {
-				var parts = getQS(uri).split('/');
-				parts = _(parts).filter(function (it) { return it !== ''; });
-				var ns = _.first(parts),
-					id = _.first(_.rest(parts));
-				return { ns : ns, id : id };
-			}
-
-			function includeHelper(ns) {
-				$('head').append( $('<script/>', {
-					src : ns + '/kn-helper.js',
-					type : 'text/javascript'}));
-			}
-
-			function setup(uri) {
-				var parts = getParts(uri);
-				console.log(parts);
-				var ns = parts.ns, id = parts.id;
-				includeHelper(ns);
-				if (ns !== undefined) {
-					var all_uri = '../data/' + ns + '/all.js';
-					// console.log('Loading all: %s', all_uri);
-					$.getJSON(all_uri, function(allData) {
-						window[ns].loadViewModel(allData);
-						if (id !== undefined) {
-							var id_uri = '../data/' + ns + '/' + id + '.js';
-							// console.log('Loading single element from: %s', id_uri);
-							$.getJSON(id_uri, function(idData) {
-								console.log('Data loaded.');
-								window[ns].loadModel(idData);
-								ko.applyBindings(window[ns].ViewModel);
-							});
-						} else {
-							ko.applyBindings(window[ns].ViewModel);
-						}
-
-					});
-				}
-			}
-
 			function testBind() {
 				var parts = getParts(window.location.search);
 				window[parts.ns].testBind();
@@ -62,8 +19,8 @@
 		<a href="javascript:testBind()">Bind</a>
 		<div class="single" data-bind="with: active">
 			Id : <span data-bind="text: id"></span><br/>
-			Name:<input id="name" type="text" data-bind="value: name"/><br/>
-			Url:<input id="url" type="text" data-bind="value: url" /><br/>
+			Name: <input id="name" type="text" data-bind="value: name"/><br/>
+			Url: <input id="url" type="text" data-bind="value: url" /><br/>
 			<input type="button" value="New" />
 			<input type="submit" value="Update" />
 			<input type="button" value="Delete" />
