added people as an example

--- a/static/index.html
+++ b/static/index.html
@@ -4,9 +4,8 @@
 
 		Menu:
 		<ol>
-			<li>
-				<a href="master-detail.html?/organizations/">Organizations</a>
-			</li>
+			<li><a href="master-detail.html?/organizations/">Organizations</a></li>
+			<li><a href="master-detail.html?/people/">People</a></li>
 		</ol>
 	</body>
 </html>
