moved external dependencies to their own folder

--- a/static/master-detail.html
+++ b/static/master-detail.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-		<script type='text/javascript' src='https://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js'></script>
-		<script type='text/javascript' src='knockout-2.0.0.debug.js'></script>
-		<script type='text/javascript' src='underscore.js'></script>
+		<script type='text/javascript' src='lib/jquery-1.7.1.js'></script>
+		<script type='text/javascript' src='lib/knockout-2.0.0.debug.js'></script>
+		<script type='text/javascript' src='lib/underscore.js'></script>
 		<script type='text/javascript' src='binding-helper.js'></script>
 		<script type='text/javascript'>
 			function testBind() {
