--- a/static/master-detail.html
+++ b/static/master-detail.html
@@ -1,5 +1,6 @@
 <html>
 	<head>
+		<script type='text/javascript' src='config.js'></script>
 		<script type='text/javascript' src='lib/jquery-1.7.1.js'></script>
 		<script type='text/javascript' src='lib/knockout-2.0.0.debug.js'></script>
 		<script type='text/javascript' src='lib/underscore.js'></script>
